--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-terminal"></i>特效师求职</a>
+                <a class="navbar-brand page-scroll" href="#page-top"></i>影视特效</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,6 +42,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">基本资料</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#demo">部分作品</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#works">项目经验</a>
@@ -71,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>简历<span class="brand-heading">影视特效师</span></h1>
-                        <p class="intro-text">喜欢技术，热爱挑战</p>
+                        
+                        <h2 class="intro-text">喜欢技术，热爱挑战</h2>
                         <a href="#services" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -81,7 +84,7 @@
             </div>
         </div>
     </header>
-<div class="copyrights">Baron简历 <a href="http://blog.youzewang.com/jianli" >前端工程师</a></div>
+<div class="copyrights">Kwd简历 <a href="http://blog.youzewang.com/jianli" >前端工程师</a></div>
 <!-- Services Section -->
 <div id="services" class="text-center">
   <div class="container">
@@ -117,6 +120,23 @@
         <h4><strong>联系方式</strong></h4>
         <p>QQ：505 8724 60</br>
 		  手机：136 9140 3056</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="demo">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2><strong>部分</strong> Demo</h2>
+      <hr>
+    </div>
+    <div class="row">
+      <!--<div class="col-md-6"> <img src="img/about.png" class="img-responsive"> </div>-->
+      <div class="col-md-12 text-center">
+        <div class="about-text"> 
+        	<!--<i class="fa fa-users"></i>-->
+			<video src="video/demo.mp4" controls="controls"></video>
+        </div>
       </div>
     </div>
   </div>
@@ -294,26 +314,19 @@
       <hr>
       <p>热爱制作电影特效，把自己对特效的理解通过一个个三维元素拼合成一个完整的镜头。</p>
     </div>
-    <div id="row">
-	
-	<div class="col-md-3 col-sm-6">
-        <div class="thumbnail"> <img src="img/team/02.jpg" alt="浙江理工大学" class="img-circle team-img">
-          <div class="caption">
+    <div class="col-md-12 col-sm-12">
+        <div class="thumbnail "> <img src="img/team/02.jpg" alt="浙江理工大学" class="img-circle team-img">
+          <div class="caption ">
             <h3>南京艺术学院</h3>
             <p>动画专业</p>
             <p>主要学习max maya houdini realfow等软件制作三维特效</p>
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="thumbnail"> <img src="img/team/03.jpg" alt="浙大网新" class="img-circle team-img">
-          <div class="caption">
-            <h3>北京中科北控成像技术有限公司</h3>
-            <p>特效师</p>
-            <p>担任特效师</p>
-          </div>
-        </div>
-      </div>
+    <div id="row">
+	
+	
+      
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail"> <img src="img/team/04.jpg" alt="欧工国际" class="img-circle team-img">
           <div class="caption">
@@ -333,6 +346,24 @@
           </div>
         </div>
       </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail"> <img src="img/team/04.jpg" alt="欧工国际" class="img-circle team-img">
+          <div class="caption">
+            <h3>北京数虎图像</h3>
+            <p>特效师 </p>
+            <p>担任特效师 </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail"> <img src="img/team/04.jpg" alt="欧工国际" class="img-circle team-img">
+          <div class="caption">
+            <h3>逸得网络</h3>
+            <p>web开发工程师 </p>
+            <p>网站开发</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -345,7 +376,7 @@
     </div>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <div id="testimonial" class="owl-carousel owl-theme">
+        <div id="testimonial" class="owl-carousel owl-theme" style="display: block;">
           <div class="item">       
             <p>
 			热爱学习,良好的团队合作精神，能迅速融入新的团队。</br>易和人相处，拥有良好的亲和力。
